[package]
name = "traffic"
version = "0.1.0"
authors = ["Styvane Soukossi <styvane@acm.org>"]
edition = "2018"


[[bin]]
name = "traffic-light"
path = "bin/traffic_light.rs"


[[bin]]
name = "traffic-button"
path = "bin/traffic_button.rs"


[[bin]]
name = "traffic-controller"
path = "src/main.rs"


[dependencies]
crossterm = "0.25.0"
clap = { version = "4", features = ["derive"] }