[package]
name = "traffic"
version = "0.1.0"
authors = ["Sede Soukossi <4968379+styvane@users.noreply.github.com>"]
edition = "2024"
publish = false

[[bin]]
name = "traffic-light"
path = "bin/traffic_light.rs"


[[bin]]
name = "traffic-button"
path = "bin/traffic_button.rs"


[[bin]]
name = "traffic-controller"
path = "src/main.rs"


[dependencies]
crossterm = "0.29.0"
clap = { version = "4.5.37", features = ["derive"] }